samples/errors/array_pop_empty.lox
// arrayPop on empty array should produce runtime error
var a = newArray();
arrayPop(a); // expect runtime error: Cannot pop from an empty array.
